sample/msvc/error/c2046.cpp
// C2046.cpp
int main() {
   case 0:   // C2046
}
